force-app/main/default/objects/Tickets__c/Tickets__c.object-meta.xml
<CustomObject>
    <label>IT Help</label>
    <nameField>
        <displayFormat>IT-{00000}</displayFormat>
        <label>Tickets ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Help</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>