force-app/main/default/objects/Tickets__c/fields/Assigned_Sent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned Sent</label>
    <type>Checkbox</type>
</CustomField>