force-app/main/default/objects/Tickets__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Worker</value>
        </filterItems>
        <filterItems>
            <field>Contact.Clinician_Discipline__c</field>
            <operation>equals</operation>
            <value>Information Technology</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IT Help</relationshipLabel>
    <relationshipName>IT_Help</relationshipName>
    <type>Lookup</type>
</CustomField>