force-app/main/default/objects/Tickets__c/fields/Close_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Time__c</fullName>
    <description>The date and time a ticket was closed</description>
    <label>Close Date/Time</label>
    <type>DateTime</type>
</CustomField>