force-app/main/default/objects/Tickets__c/fields/Closed_Sent__c.field-meta.xml
<CustomField>
    <fullName>Closed_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Sent</label>
    <type>Checkbox</type>
</CustomField>