force-app/main/default/objects/Tickets__c/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check once first contact is made</inlineHelpText>
    <label>Contacted</label>
    <type>Checkbox</type>
</CustomField>