force-app/main/default/objects/Tickets__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>$User.Id =  Assigned_To__r.enrtcr__User__r.Id</formula>
    <label>Current User</label>
    <type>Checkbox</type>
</CustomField>