force-app/main/default/objects/Tickets__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <inlineHelpText>Please input time if it is a same day request</inlineHelpText>
    <label>Due Date/Time</label>
    <type>DateTime</type>
</CustomField>