force-app/main/default/objects/Tickets__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sand (L1)</fullName>
                <default>true</default>
                <label>Sand (L1)</label>
            </value>
            <value>
                <fullName>Rock (L2)</fullName>
            </value>
            <value>
                <fullName>Boulder (L3)</fullName>
            </value>
            <value>
                <fullName>Mountain (L4)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>