force-app/main/default/objects/Tickets__c/fields/FCR__c.field-meta.xml
<CustomField>
    <fullName>FCR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you resolve this ticket on your first call?</description>
    <inlineHelpText>Check if resolved on first call</inlineHelpText>
    <label>FCR</label>
    <type>Checkbox</type>
</CustomField>