force-app/main/default/objects/Tickets__c/fields/Guide__c.field-meta.xml
<CustomField>
    <fullName>Guide__c</fullName>
    <label>Guide</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>