force-app/main/default/objects/Tickets__c/fields/I__c.field-meta.xml
<CustomField>
    <fullName>I__c</fullName>
    <label>Issue Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IssueType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lumary</fullName>
            </value>
            <value>
                <fullName>Lumary Login Issue</fullName>
            </value>
            <value>
                <fullName>Lumary Access Issue</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
            <value>
                <fullName>Sharepoint Sync Issue</fullName>
            </value>
            <value>
                <fullName>Sharepoint Access Issue</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Laptop Battery Issue</fullName>
            </value>
            <value>
                <fullName>Laptop Camera Issue</fullName>
            </value>
            <value>
                <fullName>Laptop Login Issue</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Outlook Signature Issue</fullName>
            </value>
            <value>
                <fullName>Outlook Mail Issue</fullName>
            </value>
            <value>
                <fullName>Outlook Login Issue</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>Teams Login Issue</fullName>
            </value>
            <value>
                <fullName>Microsoft Enterprise Update</fullName>
            </value>
            <value>
                <fullName>Microsoft Enrolment Issue</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Mobile Login Issue</fullName>
            </value>
            <value>
                <fullName>Mobile Reception Issue</fullName>
            </value>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>Office 365 Login Issue</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>Zoom Login Issue</fullName>
            </value>
            <value>
                <fullName>Zoom Meeting Issue</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Network Modem Issue</fullName>
            </value>
            <value>
                <fullName>Network Connection Issue</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>