force-app/main/default/objects/Tickets__c/fields/IssueType__c.field-meta.xml
<CustomField>
    <fullName>IssueType__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lumary</fullName>
            </value>
            <value>
                <fullName>Better Calendar</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
                <label>Sharepoint/OneDrive</label>
            </value>
            <value>
                <fullName>Docusign</fullName>
            </value>
            <value>
                <fullName>Better Rewards</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>OT Draw</fullName>
            </value>
            <value>
                <fullName>Software Installation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Microsoft Enterprise Update</fullName>
                <isActive>false</isActive>
                <label>Microsoft Enterprise Update</label>
            </value>
            <value>
                <fullName>VPN</fullName>
                <isActive>false</isActive>
                <label>VPN</label>
            </value>
            <value>
                <fullName>Zoom</fullName>
                <isActive>false</isActive>
                <label>Zoom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>