force-app/main/default/objects/Tickets__c/fields/IT_Asset_del__c.field-meta.xml
<CustomField>
    <fullName>IT_Asset_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If a hardware needs to be replaced, please enter the broken hardware ID related to this ticket</inlineHelpText>
    <label>Device Serial Number</label>
    <referenceTo>IT_Asset__c</referenceTo>
    <relationshipLabel>IT Help</relationshipLabel>
    <relationshipName>IT_Help_del</relationshipName>
    <type>Lookup</type>
</CustomField>