force-app/main/default/objects/Tickets__c/fields/MyToDoCheck__c.field-meta.xml
<CustomField>
    <fullName>MyToDoCheck__c</fullName>
    <formula>IF( Assigned_To__r.enrtcr__User__r.Id = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyToDoCheck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>