force-app/main/default/objects/Tickets__c/fields/Network_Details__c.field-meta.xml
<CustomField>
    <fullName>Network_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If applicable, enter the phone numbers/internet numbers related to this IT ticket</inlineHelpText>
    <label>Network Details</label>
    <referenceTo>Telephone_Internet__c</referenceTo>
    <relationshipLabel>IT Help</relationshipLabel>
    <relationshipName>IT_Help</relationshipName>
    <type>Lookup</type>
</CustomField>