force-app/main/default/objects/Tickets__c/fields/Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager__c</fullName>
    <formula>TEXT( On_Behalf__r.Site__c )</formula>
    <label>Office Manager</label>
    <type>Text</type>
</CustomField>