force-app/main/default/objects/Tickets__c/fields/On_Behalf__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Behalf</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IT_Help</relationshipName>
    <type>Lookup</type>
</CustomField>