force-app/main/default/objects/Tickets__c/fields/on_Behalf_of__c.field-meta.xml
<CustomField>
    <fullName>on_Behalf_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>on Behalf of</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Worker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>On Behalf Of</relationshipLabel>
    <relationshipName>IT_Help1</relationshipName>
    <type>Lookup</type>
</CustomField>