force-app/main/default/objects/Tickets__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>&quot;Medium&quot;</defaultValue>
    <description>Urgent - Tech issues that are of extreme urgency and affect more than 5 people
High - Tech issues that are of high urgency and affect you
Medium - Tech issues that are of medium importance that do not get in the way of essential work
Low - Tech issues that can wait 2-3 days</description>
    <inlineHelpText>Urgent - Tech issues that are of extreme urgency and affect more than 5 people

High - Tech issues that are of high urgency and affect you

Medium - Tech issues that do not get in the way of essential work

Low - Tech issues that can wait 2-3 days</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>