force-app/main/default/objects/Tickets__c/fields/PriorityInfo__c.field-meta.xml
<CustomField>
    <fullName>PriorityInfo__c</fullName>
    <formula>CASE( Priority__c, &apos;Urgent&apos;, &apos;Urgent&apos;, &apos;High&apos;, &apos;This is a high ticket&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority info</label>
    <type>Text</type>
</CustomField>