force-app/main/default/objects/Tickets__c/fields/Recieved_Sent__c.field-meta.xml
<CustomField>
    <fullName>Recieved_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recieved Sent</label>
    <type>Checkbox</type>
</CustomField>