force-app/main/default/objects/Tickets__c/fields/TicketType__c.field-meta.xml
<CustomField>
    <fullName>TicketType__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>