force-app/main/default/objects/Tickets__c/fields/Type_of_IT_Help__c.field-meta.xml
<CustomField>
    <fullName>Type_of_IT_Help__c</fullName>
    <label>Type of IT Help</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>