force-app/main/default/objects/Tickets__c/fields/Urgent_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Response_Time__c</fullName>
    <label>Urgent Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>