force-app/main/default/objects/Tickets__c/fields/Worker_s_Number__c.field-meta.xml
<CustomField>
    <fullName>Worker_s_Number__c</fullName>
    <formula>on_Behalf_of__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker&apos;s Number</label>
    <type>Text</type>
</CustomField>