force-app/main/default/objects/Tickets__c/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>false</active>
    <label>Internal</label>
</RecordType>