force-app/main/default/objects/Tickets__c/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <description>Tech related issues that you require assistance with.</description>
    <label>Issue</label>
</RecordType>