force-app/main/default/objects/Tickets__c/recordTypes/Query.recordType-meta.xml
<RecordType>
    <fullName>Query</fullName>
    <active>true</active>
    <description>If you have a question to ask IT such as suspicious links or emails. Please don&apos;t put your tech issues here.</description>
    <label>Query</label>
</RecordType>