force-app/main/default/objects/Tickets__c/recordTypes/Task.recordType-meta.xml
<RecordType>
    <fullName>Task</fullName>
    <active>true</active>
    <description>If you have a task for IT such as setting up a new internet connection or uploading new photos to our website.</description>
    <label>Task</label>
</RecordType>