force-app/main/default/objects/Tickets__c/listViews/All_incl_Closed.listView-meta.xml
<ListView>
    <fullName>All_incl_Closed</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Summary__c</columns>
    <columns>IssueType__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>On_Behalf__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Type_of_IT_Help__c</columns>
    <filterScope>Everything</filterScope>
    <label>All (incl. Closed)</label>
    <sharedTo>
        <group>IT</group>
    </sharedTo>
</ListView>