force-app/main/default/objects/Tickets__c/listViews/List_of_IT_Assets_Tickets.listView-meta.xml
<ListView>
    <fullName>List_of_IT_Assets_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>On_Behalf__c</columns>
    <columns>IT_Asset_del__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IT_Asset_del__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <label>List of IT Assets Tickets</label>
</ListView>