force-app/main/default/objects/Tickets__c/listViews/Lumary_tickets.listView-meta.xml
<ListView>
    <fullName>Lumary_tickets</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>IssueType__c</columns>
    <columns>Type_of_IT_Help__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>On_Behalf__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>IssueType__c</field>
        <operation>equals</operation>
        <value>Lumary,Better Calendar,Other</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
    </filters>
    <label>Lumary tickets</label>
</ListView>