force-app/main/default/objects/Tickets__c/listViews/Unassigned.listView-meta.xml
<ListView>
    <fullName>Unassigned</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Summary__c</columns>
    <columns>IssueType__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>On_Behalf__c</columns>
    <columns>Difficulty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Unassigned</label>
    <sharedTo>
        <group>IT</group>
    </sharedTo>
</ListView>